--- a/TPFINAL/src/Vista/crearPelicula.form
+++ b/TPFINAL/src/Vista/crearPelicula.form
@@ -105,7 +105,7 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <Component id="usuarioNombre4" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="18" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="usuarioNombre5" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="usuarioNombre6" min="-2" max="-2" attributes="0"/>
@@ -299,9 +299,7 @@
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="1">
-                <StringItem index="0" value="Inasdasdasd"/>
-              </StringArray>
+              <StringArray count="0"/>
             </Property>
           </Properties>
           <AuxValues>
